--- a/css/style.css
+++ b/css/style.css
@@ -269,53 +269,87 @@ body {
 /* --------------------------- */
 
 .get-started {
-
+    background-color: #fafdfd;
+    padding: 150px 0 50px 0;
 }
-.get-started_container {
-
+.get-started__container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 .get-started__content {
-
+    flex: 0 1 48%;
+    padding: 0 0 0 20px;
 }
 .get-started__block-text {
+    max-width: 410px;
+}
+.get-started__video {
+    flex: 1 1 100%;
+    padding: 60px 0 0 20px;
+}
+.get-started__image {
+    flex: 0 1 52%;
+}
+
+.get-started__image img {
+    max-width: 100%;
+}
+
+.video-get-started {
+    display: inline-flex;
+    align-items: center;
 
 }
+.video-get-started__icon {
+    flex: 0 0 44px;
+}
+.video-get-started__body {
+    padding: 0 0 0 12px;
+}
+.video-get-started__title {
+    color: #b0b0b0;
+    font-size: 13px;
+    line-height: 126%;
+    letter-spacing: 1.5px;
+}
+.video-get-started__title:not(:last-child) {
+    margin: 0 0 5px 0;
+}
+.video-get-started__text {
+    text-transform: uppercase;
+    font-size: 9px;
+    line-height: 126%;
+    letter-spacing: 2px;
+    color: #000;
+}
+
+/* -------------------------------------------- */
 .block-text {
 
 }
 .block-text__title {
-
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 126%;
+    color: #000;
 }
-.block-text__title_blue {
-
+.block-text__title:not(:last-child) {
+    margin: 0 0 12px 0;
+}
+.block-text__title span {
+    color: #EC5863;
+}
+.block-text__title_blue span{
+    color: #4285F4;
 }
 .block-text__text {
-
+    line-height: 138.5%;
+}
+.block-text__text:not(:last-child) {
+    margin: 0 0 24px 0;
 }
 .block-text__button {
 
 }
-.button {
-
-}
-.get-started__video {
-
-}
-.video-get-started {
-
-}
-.video-get-started__icon {
-
-}
-.video-get-started__body {
-
-}
-.video-get-started__title {
-
-}
-.video-get-started__text {
-
-}
-.get-started__image {
-
-}
+/* -------------------------------------------- */
